--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Naoto Ikuno <moon_in_france@yahoo.co.jp>",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "axios": "^0.27.2",
     "jest": "^29.0.3",
-    "prettier": "^2.7.1"
+    "jest-environment-jsdom": "^29.0.3",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
